# cumo

./: .travis.yml  Dockerfile  Makefile  README.md  build-on-container.sh  build.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNER  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bugfix.md  enhancement.md  suggestion.md
.github/workflows/: build-and-lint.yml  deploy.yml  documentation.yml  main.yml
client/: .eslintignore  .eslintrc.yml  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts  webpack.config.js
client/src/: camera_control.ts  canvas2d.ts  event.ts  gui_manager.ts  index.ts  lineset.ts  overlay.ts  spinner.ts  style.css  style.sass  viewer.ts  websocket.ts
client/src/gui/: add_control.ts  gui_manager.ts  remove_control.ts  set_control.ts  util.ts
client/src/websocket/: client_command.ts  configure.ts  index.d.ts  websocket.ts
client/src/websocket/handler/: add_control.ts  add_object.ts  camera_state_event.ts  capture_screen.ts  get_camera.ts  get_camera_status.ts  log_message.ts  remove_control.ts  remove_object.ts  set_camera.ts  set_config.ts  set_control.ts  set_enable.ts  set_key_event.ts  set_property.ts  util.ts
lib/: .flake8  .gitignore  .pylintrc  pyproject.toml
lib/cumo/: __init__.py  __main__.py  camera_state.py  constants.py  pointcloudviewer.py
lib/cumo/_internal/: down_sample.py  server.py
lib/cumo/_internal/members/: camera.py  capture_screen.py  custom_control.py  event_handler.py  internal_utils.py  keyboard_event_handler.py  manage_properties.py  remove_object.py  send_object.py  set_config.py  set_custom_control.py  set_enable.py  utils.py
lib/kci/pointcloudviewer/: __init__.py  __main__.py  keyboard_event.py  pointcloudviewer.py
lib/kci/pointcloudviewer/_internal/: down_sample.py  server.py
lib/kci/pointcloudviewer/_internal/members/: camera.py  capture_screen.py  custom_control.py  event_handler.py  internal_utils.py  keyboard_event_handler.py  remove_object.py  send_object.py  set_custom_control.py  utils.py
lib/pointcloud_viewer/: .gitignore  __init__.py  __main__.py  keyboard_event.py  pointcloud_viewer.py  server.py
lib/pointcloud_viewer/_internal/: down_sample.py  server.py
lib/pointcloud_viewer/_internal/members/: camera.py  capture_screen.py  custom_control.py  event_handler.py  internal_utils.py  keyboard_event_handler.py  remove_object.py  send_object.py  set_custom_control.py  utils.py
protobuf/: client.proto  server.proto
